# repository-pattern-python-mongo-sqlite-postgres

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/domain/: __init__.py  user.py  user_repository.py
src/frameworks_drivers/: user_repository.py
src/interfaces_adapters/: __init__.py  user_mongo_repository.py  user_postgre_repository.py  user_sqlite_repository.py
src/use_cases/: __init__.py  user_use_case.py
tests/: user_use_case_test.py
