[project]
name = "repository-pattern-python"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pymongo>=4.8.0",
    "psycopg[binary]>=3.2.1",
]
readme = "README.md"
requires-python = "==3.12.*"

[tool.rye]
virtual = true
dev-dependencies = [
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".docker"
]

[tool.pytest.ini_options]
pythonpath = "./src"
testpaths = [
    "tests",
]

[tool.rye.scripts]
test = 'pytest -s -x --cov-report=term-missing --cov-config=pyproject.toml --cov=src -vv'
test_cov = 'coverage html'
